Sun Oct 21 03:37:10 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/DynamicInterface/AMH_DSI_Response_Handler.h:
        * tao/DynamicInterface/AMH_DSI_Response_Handler.inl:
        * tao/DynamicInterface/AMH_DSI_Response_Handler.cpp:

          Removed redundent code, replaced with existing _var and _out
          type templates for objref and value types. This change was
          inspired by the suggestion of Venkat Sidhabathuni <venkats at
          idengines dot com> in bugzilla #3093.

        * tests/DSI_AMH/Roundtrip.cpp:

        * tests/DSI_AMI_Gateway/My_DII_Reply_Handler.h:
        * tests/DSI_AMI_Gateway/My_DII_Reply_Handler.cpp:
        * tests/DSI_AMI_Gateway/test_dsi.cpp:

          Fix memory leaks documented in bug 3093.

Thu Oct 18 14:17:52 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * orbsvcs/tests/Notify/MC/run_test.pl:
          Test was failing because MC ORB didn't have the correct NS
          endpoint info.

Mon Oct 15 15:31:04 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * orbsvcs/tests/Notify/MC/notify.conf:
        * orbsvcs/tests/Notify/MC/run_test.pl:
          The Montoring Service now registers itself with the Naming
          Service. The test script now directly passes the NS reference to
          the Monitoring service.

Fri Oct 12 17:17:21 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * orbsvcs/tests/Security/ssliop_CSD/Messenger_i.h:
        * orbsvcs/tests/Security/ssliop_CSD/Messenger_i.cpp:
        * orbsvcs/tests/Security/ssliop_CSD/run_test.pl:
        * orbsvcs/tests/Security/ssliop_CSD/ssliop_CSD.mpc:
          Fuzz build cleanups.

        * orbsvcs/tests/Security/ssliop_CSD/MessengerI.cpp:
          Removed this file. Was duplicate of Messenger_i.cpp

Fri Oct 12 15:18:40 UTC 2007  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/POA/DSI/client.cpp:
        * tests/POA/DSI/server.cpp:
        * tests/POA/Non_Servant_Upcalls/Non_Servant_Upcalls.cpp: