@@ -8,8 +8,8 @@
 My_DII_Reply_Handler::My_DII_Reply_Handler(
     TAO_AMH_DSI_Response_Handler_ptr rph,
     CORBA::ORB_var orb)
-  : response_handler_ (TAO_AMH_DSI_Response_Handler::_duplicate(rph)),
-    orb_ (orb)
+ : response_handler_ (rph),
+  orb_ (orb)
 {
 }
 
@@ -20,11 +20,11 @@ My_DII_Reply_Handler::~My_DII_Reply_Handler()
 void
 My_DII_Reply_Handler::handle_response(TAO_InputCDR &incoming)
 {
-  CORBA::NVList_var list;
+  CORBA::NVList_ptr list;
 
   try
   {
-    this->orb_->create_list (0, list.out());
+    this->orb_->create_list (0, list);
 
     bool lazy_evaluation = true;
     list->_tao_incoming_cdr (incoming,
@@ -44,10 +44,10 @@ My_DII_Reply_Handler::handle_response(TAO_InputCDR &incoming)
     response_handler_->invoke_excep(&h);
   }
 
-  if (!CORBA::is_nil (this->response_handler_))
+    if (!CORBA::is_nil (this->response_handler_))
     this->response_handler_->invoke_reply (list,
                                            0 // result
-                                           );
+                                          );
 }
 
 void
@@ -58,3 +58,4 @@ My_DII_Reply_Handler::handle_excep (TAO_InputCDR &incoming,
   this->response_handler_->gateway_exception_reply (reply_status, incoming);
 
 }
+
