@@ -42,20 +42,27 @@ DSI_Simple_Server::_dispatch (TAO_ServerRequest &request,
     }
 
   // Create DSI request object.
-  CORBA::ServerRequest_var dsi_request;
+  CORBA::ServerRequest *dsi_request = 0;
   ACE_NEW (dsi_request,
            CORBA::ServerRequest (request));
 
   try
     {
-      TAO_AMH_DSI_Response_Handler_var rh;
-      ACE_NEW (rh, TAO_AMH_DSI_Response_Handler(request));
-      rh->init (request, 0);
+      TAO_AMH_DSI_Response_Handler_ptr rh_ptr = 0;
+      ACE_NEW (rh_ptr, TAO_AMH_DSI_Response_Handler(request));
+
+      TAO_AMH_DSI_Response_Handler_var rh = rh_ptr;
+
+      // init the handler
+      TAO_AMH_BUFFER_ALLOCATOR* amh_allocator =
+              request.orb()->orb_core ()->lane_resources().amh_response_handler_allocator();
+      rh->init (request, amh_allocator);
       // Delegate to user.
-      this->invoke (dsi_request.in(),
+      this->invoke (dsi_request,
                     rh.in());
     }
   catch (const CORBA::Exception& ex)
+
     {
       // Only if the client is waiting.
       if (request.response_expected () && !request.sync_with_server ())
@@ -63,6 +70,8 @@ DSI_Simple_Server::_dispatch (TAO_ServerRequest &request,
           request.tao_send_reply_exception (ex);
         }
     }
+
+  CORBA::release (dsi_request);
 }
 
 void
